scripts/nullaway/original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8.txt
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/LinuxOption.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields dtb (line 12), kimage (line 13), initrd (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LinuxOption() {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/ProxyOption.java:14: error: [NullAway] initializer method does not guarantee @NonNull field proxyHost (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ProxyOption() {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:295: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:301: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:312: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:318: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:330: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:336: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/MasterCore.java:19: error: [NullAway] @NonNull field slaveBus not initialized
    private Bus slaveBus;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Bus.java:335: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Bus.java:362: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                sc.setMasterBus(null);
                                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Bus.java:403: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Bus.java:515: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            super(null, 0, 0);
                  ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/SlaveCore.java:29: error: [NullAway] @NonNull field masterBus not initialized
    private Bus masterBus;
                ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/NormalINTC.java:27: error: [NullAway] initializer method does not guarantee @NonNull field intSrcs (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NormalINTC(int n) {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/PSR.java:31: error: [NullAway] initializer method does not guarantee @NonNull field regfile (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PSR() {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/APSR.java:34: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        super(name, 0, null);
                       ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/SPSR.java:31: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        super(name, 0, null);
                       ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/MainWindow.java:23: error: [NullAway] initializer method does not guarantee @NonNull field emu (line 20) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MainWindow(LinuxOption linuxOpts) {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/MainApplet.java:32: error: [NullAway] initializer method does not guarantee @NonNull fields listenButton (line 23), tabPane (line 24), panel (line 25), stdoutPanel (line 26), linuxOptPanel (line 27), proxyOptPanel (line 28), emu (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MainApplet() {
           ^
    (see http://t.uber.com/nullaway )
../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Flush16.java:268: error: [NullAway] initializer method does not guarantee @NonNull field wordsCFI (line 23) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Flush16(int size) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../original/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/MainApplet.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
21 errors
